@@ -1244,7 +1244,7 @@
       }
     },
     dialog: function() {
-      var arr, back, checked, description, dialog, hiddenNum, hiddenThreads, input, key, li, obj, overlay, ta, time, ul, _i, _j, _len, _len2, _ref, _ref2, _ref3;
+      var arr, back, checked, description, dialog, hiddenNum, hiddenThreads, indicator, indicators, input, key, li, obj, overlay, ta, time, ul, _i, _j, _k, _len, _len2, _len3, _ref, _ref2, _ref3, _ref4;
       dialog = ui.dialog('options', '', '\
 <div id=optionsbar>\
   <div id=credits>\
@@ -1264,9 +1264,13 @@
   <input type=radio name=tab hidden id=main_tab checked>\
   <div></div>\
   <input type=radio name=tab hidden id=flavors_tab>\
-  <textarea name=flavors id=flavors></textarea>\
+  <div>\
+    <p class=error><code>Sauce</code> is disabled.</p>\
+    <textarea name=flavors id=flavors></textarea>\
+  </div>\
   <input type=radio name=tab hidden id=filter_tab>\
   <div>\
+    <p class=error><code>Filter</code> is disabled.</p>\
     Use <a href=https://developer.mozilla.org/en/JavaScript/Guide/Regular_Expressions>regular expressions</a>, one per line.<br>\
     For example, <code>/weeaboo/i</code> will filter posts containing `weeaboo` case-insensitive.\
     <p>Name:<br><textarea name=name></textarea></p>\
@@ -1280,10 +1284,12 @@
   </div>\
   <input type=radio name=tab hidden id=rice_tab>\
   <div>\
+    <p class=error><code>Quote Backlinks</code> are disabled.</p>\
     <ul>\
       Backlink formatting\
       <li><input type=text name=backlink> : <span id=backlinkPreview></span></li>\
     </ul>\
+    <p class=error><code>Time Formatting</code> is disabled.</p>\
     <ul>\
       Time formatting\
       <li><input type=text name=time> : <span id=timePreview></span></li>\
@@ -1297,6 +1303,7 @@
   </div>\
   <input type=radio name=tab hidden id=keybinds_tab>\
   <div>\
+    <p class=error><code>Keybinds</code> are disabled.</p>\
     <table><tbody>\
       <tr><th>Actions</th><th>Keybinds</th></tr>\
       <tr><td>Close Options or QR</td><td><input name=close></td></tr>\
@@ -1364,6 +1371,17 @@
         input.type = 'text';
         input.value = conf[input.name];
         $.on(input, 'keydown', options.keybind);
+      }
+      indicators = {};
+      _ref4 = $$('.error', dialog);
+      for (_k = 0, _len3 = _ref4.length; _k < _len3; _k++) {
+        indicator = _ref4[_k];
+        key = indicator.firstChild.textContent;
+        indicator.hidden = conf[key];
+        indicators[key] = indicator;
+        $.on($("[name='" + key + "']", dialog), 'click', function() {
+          return indicators[this.name].hidden = this.checked;
+        });
       }
       overlay = $.el('div', {
         id: 'overlay'
@@ -3184,7 +3202,7 @@
       #options [name=tab]:not(:checked) + * {\
         display: none;\
       }\
-      #content > * {\
+      #content > div {\
         height: 450px;\
         overflow: auto;\
       }\
@@ -3193,6 +3211,9 @@
         min-height: 100px;\
         resize: vertical;\
         width: 100%;\
+      }\
+      #flavors {\
+        height: 100%;\
       }\
 \
       #qr {\
