@@ -1,5 +1,6 @@
 master
 - mayhem
+  indicate if the settings require a feature to be enabled
   fix obscure and continuous prompts to auto update
 
 2.22.1
